# SNAKE_TPCA-DCPA_NAV

./: .gitignore  PLANS.md  README.md  autoaimstart.sh  current.md  extract_bag_to_csv.py  make_map.py  paper.md  plot_smoothness.py  plot_trajectory.py  pre.sh  prepare_paper_tables.py  prepare_smoothness_data.py  rebuild_sim_pcd.sh  record_exp.sh  record_smoothness_bag.sh  run_ablation_eval.py  run_smoothness_exp.sh  run_smoothness_narrow.sh  sim_nav.sh  sim_nav_dwb_baseline.sh  sim_nav_dwb_baseline_narrow.sh  sim_nav_dwb_risk_only.sh  sim_nav_narrow.sh  sim_nav_teb.sh  sim_nav_teb_narrow.sh  sim_pre.sh  sim_pre_narrow.sh  sim_pre_random.sh
ablation_eval_output/: ablation_results.csv  ablation_trials.csv  multi_scenario_results.csv  multi_scenario_trials.csv  paper_dynamic_test_table.csv  paper_multi_scenario_table.csv  paper_multi_scenario_wide.csv  paper_overhead_table.csv
ablation_eval_output/smoothness_processed/: smoothness_summary.csv
ablation_eval_output/smoothness_processed/baseline_narrow_smoothness_20260404_195054_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/baseline_narrow_smoothness_20260404_195229_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/baseline_smoothness_20260404_183836_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/baseline_smoothness_20260404_184020_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/baseline_smoothness_20260404_191231_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/full_narrow_smoothness_20260404_195138_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/full_narrow_smoothness_20260404_195306_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/full_smoothness_20260404_183932_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/full_smoothness_20260404_184256_csv/: cmd_vel_processed.csv  robot_odom_processed.csv  smoothness_merged.csv
ablation_eval_output/smoothness_processed/full_smoothness_20260404_191333_csv/: cmd_vel_processed.csv  (+2 more)
predictive_navigation_msgs/: CMakeLists.txt
predictive_navigation_msgs/msg/: TrackedObstacle.msg  TrackedObstacleArray.msg
predictive_tracker/: CMakeLists.txt  package.xml
predictive_tracker/config/: dynamic_tracker.yaml
predictive_tracker/launch/: dynamic_tracker.launch.py
predictive_tracker/src/: dynamic_tracker_node.cpp
rm_communication/bubble_decision/: package.xml
rm_communication/bubble_interface/game_msgs/: CMakeLists.txt  package.xml
rm_communication/bubble_interface/game_msgs/msg/: RobotHP.msg  Zone.msg
rm_communication/bubble_protocol/: package.xml
rm_description/: package.xml
rm_description/config/: launch_params.yaml
rm_description/meshes/: shooter_link.STL
rm_description/urdf/: rm_gimbal.urdf.xacro
rm_description/world/: rmul2023.dae
rm_navi/fake_vel_transform/: CMakeLists.txt
rm_navi/rm_lidar_filter/: package.xml  setup.cfg
rm_navi/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
rm_navi/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation.launch.py  segmentation_params.yaml
rm_navi/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
rm_navi/smart_escape/: CMakeLists.txt  FILE_STRUCTURE.md  README.md  SUMMARY.md  package.xml
rm_navi/smart_escape/action/: SmartEscape.action
rm_navi/smart_escape/behavior_trees/: navigate_with_smart_escape.xml
rm_navi/smart_escape/config/: nav2_params.yaml  smart_escape_params.yaml
rm_navi/smart_escape/docs/: ARCHITECTURE.md  COMPARISON.md  QUICKSTART.md
rm_navi/smart_escape/include/smart_escape/: bt_smart_escape_node.hpp  smart_escape_server.hpp
rm_navi/smart_escape/launch/: navigation_with_smart_escape.launch.py  smart_escape.launch.py
rm_navi/smart_escape/scripts/: test_smart_escape.py  visualize_escape.py
rm_navi/smart_escape/src/: bt_smart_escape_node.cpp  main.cpp  smart_escape_server.cpp
src/: nav.sh  pre.sh  readme.md
src/predictive_navigation_msgs/: package.xml
src/predictive_tracker/: CMakeLists.txt  package.xml
src/predictive_tracker/config/: dynamic_tracker.yaml
src/predictive_tracker/src/: dynamic_tracker_node.cpp
src/rm_communication/bubble_interface/bboxes_ex_msgs/: CMakeLists.txt
src/rm_description/: CMakeLists.txt
src/rm_description/launch/: model.launch.py
src/rm_description/meshes/: camera_base_link.STL  camera_optical_frame.STL
src/rm_description/urdf/: infantry.urdf.xacro
src/rm_description/urdf/sensors/: generic_laser.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/rm_description/world/: rmul.world
src/rm_navi/: 1.md
src/rm_navi/rm_localization/point_lio/: CMakeLists.txt
src/rm_navi/rm_localization/point_lio/PCD/: scans.pcd
src/rm_navi/rm_localization/point_lio/config/: mid360.yaml  ouster64.yaml  velody16.yaml
src/rm_navi/rm_localization/point_lio/launch/: mapping_mid360.launch.py
src/rm_navi/rm_localization/point_lio/src/: laserMapping.cpp
src/rm_navi/rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation/: CMakeLists.txt  package.xml
tcpa_dcpa_critic/: CMakeLists.txt  package.xml  tcpa_dcpa_critic.xml
tcpa_dcpa_critic/include/tcpa_dcpa_critic/: tcpa_dcpa_critic.hpp
tcpa_dcpa_critic/src/: tcpa_dcpa_critic.cpp
tcpa_sim_env/: CMakeLists.txt  package.xml
tcpa_sim_env/launch/: sim_launch.py
tcpa_sim_env/scripts/: obstacle_mover.py  pointcloud_relay.py
tcpa_sim_env/urdf/: robot.xacro
tcpa_sim_env/worlds/: dynamic_test.world  narrow_corridor.world  random_crowd.world
(+131 files in other folders)
