<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tcpa_dcpa_critic</name>
  <version>0.0.1</version>
  <description>DWB critic plugin implementing TCPA/DCPA dynamic obstacle risk scoring.</description>
  <maintainer email="lraina@example.com">lraina</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dwb_core</depend>
  <depend>dwb_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_2d_msgs</depend>
  <depend>pluginlib</depend>
  <depend>predictive_navigation_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
